src/FinancialForce Accounting/objects/codaIncScheduleStagingJnlLineItem__c.object
<CustomObject>
    <customHelpPage>codahelpincschedulestagingjnllineitem</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IncScheduleStagingJnl__c</fullName>
        <label>Inc Schedule Staging Jnl</label>
        <referenceTo>codaIncScheduleStagingJnl__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsList</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year/Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsPeriod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScheduleLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule Line Item</label>
        <referenceTo>codaScheduleLineItem__c</referenceTo>
        <relationshipName>IncScheduleStagingJnlsLineItemsSLIList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit Of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>zDeprecated:IncSch Staging Jnl Line Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inc Schedule Staging Jnl Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>